k8s/nginx-ingress/production/nginx-ingress-client.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-client
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: deny";
      more_set_headers "Referrer-Policy: same-origin";
      more_set_headers "X-Xss-Protection: 1; mode=block";
      more_set_headers "X-Content-Type-Options: nosniff";
spec:
  tls:
  - hosts:
    - circlefight.com
    - www.circlefight.com
    secretName: nginx-ingress-tls
  rules:
  - host: circlefight.com
    http:
      paths:
      - backend:
          serviceName: client
          servicePort: 80
  - host: www.circlefight.com
    http:
      paths:
      - backend:
          serviceName: client
          servicePort: 80
