k8s/nginx-ingress/production/nginx-ingress-server.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-server
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: deny";
spec:
  rules:
  - host: circlefight.com
    http:
      paths:
      - path: /api/(.*)
        backend:
          serviceName: server
          servicePort: 80
  - host: www.circlefight.com
    http:
      paths:
      - path: /api/(.*)
        backend:
          serviceName: server
          servicePort: 80
